k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user-dropoff
  labels:
    name: user-dropoff
    environment: production
